Fixed sizing on small card height.

--- a/css/StyleSheetMain.css
+++ b/css/StyleSheetMain.css
@@ -200,7 +200,7 @@ header{
     float: left;
     max-width: 450px;
     box-shadow: 0px 2px 3px rgb(153, 153, 153);
-    height: 100px;
+    height: 120px;
 }
 
 .cardLayoutRightSmall{
@@ -212,7 +212,7 @@ header{
     float: right;
     max-width: 450px;
     box-shadow: 0px 2px 3px rgb(153, 153, 153);
-    height: 100px;
+    height: 120px;
 }
 
 
